--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url("resources/background.jpg");
+}
+
 .square {
     width: 150px;
     height: 150px;
@@ -10,5 +14,44 @@
 .board {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20%;
+    margin-top: 2%;
+    border-style: inset;
+    border-width: 10px;
+    border-color: lightgrey slategrey;
+    box-shadow: 10px 10px 5px lightgrey;
+}
+
+#wins {
+    float: left;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-left: 2%;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color:rgba(0,0,0,1);
+    margin-top: 1%;
+    margin-bottom: .5%;
+    box-shadow: 5px 5px 5px white;
+}
+
+.myButton {
+    float: right;
+    margin-left: 2%;
+    margin-top: 2% !important;
+    background-color: rgba(255,0,0,1);
+    border: 2px black solid;
+    box-shadow: 5px 5px 5px black;
+}
+
+.myButton:hover {
+    background-color: white;
+}
+
+.navbar-custom {
+    background-color: rgba(112, 128, 144, .7);
+    color: white;
+    border: 2px white solid;
+    opacity: .7;
 }
